chore: Backup failed attempt before architecture reset
현재 main 브랜치의 작업 내용을 백업합니다.
이 커밋은 Claude Code로 진행한 작업이 계속 실패하여
다른 방향으로 접근하기 위한 백업 포인트입니다.

Changes:
- 중복된 docs/coding_convention/coding_convention/ 정리
- .specstory/ 히스토리 파일 정리
- QueryDsl Repository 구현체 정리
- Scheduler 패키지 구조 변경
- Domain 파일 정리 (FileId, FileAccessLog 제거)
- 각종 설정 파일 업데이트